Added 'WebTools' button to subpages, resolves #231

--- a/FilterReview/index.html
+++ b/FilterReview/index.html
@@ -36,6 +36,8 @@
 <table style="width:1200px"><tr><td>
     <a href="https://ardupilot.org"><img src="../images/ArduPilot.png"></a>
 </td><td>
+  <a href="/"><img src="../images/WebTools_Icon.png" style="width: 90px; height: 90px;"></a>
+</td><td>
     <a href="https://github.com/ArduPilot/WebTools"><img src="../images/github-mark.png" style="width:60px"></a>
     <br>
     <a href="https://github.com/ArduPilot/WebTools"><img src="../images/GitHub_Logo.png" style="width:60px"></a>
