--- a/TelemetryDashboard/index.html
+++ b/TelemetryDashboard/index.html
@@ -91,11 +91,17 @@
             <img style="cursor:pointer; width:100%; height:100%; object-fit:contain;" src="../images/AP_Square.png">
         </a>
     </template>
-
+    
+    <template id="WT_link">
+        <a href="/" style="box-sizing:border-box; display:flex; justify-content: center; align-items: center; width:100%; height:100%;">
+            <img style="cursor:pointer; width:100%; height:100%; object-fit:contain;" src="../images/WebTools_Icon.png">
+        </a>
+    </template>
+    
     <template id="GH_link">
         <a href="https://github.com/ArduPilot/WebTools" style="box-sizing:border-box; display:flex; justify-content: center; align-items: center; width:100%; height:100%;">
             <img style="cursor:pointer; width:70%; height:70%; object-fit:contain;" src="../images/github-mark.png">
-        </div>
+        </a>
     </template>
 
     <template id="Connect_icon_template">
