--- a/GeofenceGenerator/index.html
+++ b/GeofenceGenerator/index.html
@@ -80,6 +80,9 @@
             <img id="QC" src="../images/question-circle.svg" style="width:20px; vertical-align:middle;">
         </td>
         <td>
+            <a href="/"><img src="../images/WebTools_Icon.png" style="width: 90px; height: 90px;"></a>
+        </td>
+        <td>
             <a href="https://github.com/ArduPilot/WebTools"><img src="../images/github-mark.png" style="width:60px"></a>
             <br>
             <a href="https://github.com/ArduPilot/WebTools"><img src="../images/GitHub_Logo.png" style="width:60px"></a>
