--- a/ThrustExpo/index.html
+++ b/ThrustExpo/index.html
@@ -33,6 +33,15 @@
                         />
                     </a>
                 </div>
+                <div>
+                    <a href="/">
+                        <img
+                            src="../images/WebTools_Icon.png"
+                            style="width: 90px; height: 90px;"
+                            alt="WebTools Logo"
+                        />
+                    </a>
+                </div>
                 <div class="github-logo-cell">
                     <a href="https://github.com/ArduPilot/WebTools">
                         <img
