--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Many of the tools have a "Open In" button, this allows a log that has been opene
 
   <tr>
     <td>
-      <a href="https://plot.ardupilot.org/#/" style="margin: 20px; display: inline-block;"><img src="images/UAVLogViewer_Icon.gif" style="width:200px"></a>
+      <a href="https://plot.ardupilot.org/#/" target="_blank" rel="noopener noreferrer" style="margin: 20px; display: inline-block;"><img src="images/UAVLogViewer_Icon.gif" style="width:200px"></a>
     </td>
     <td style="text-align:left; vertical-align:top; max-width:960px;">
       <h2>UAV Log viewer</h2>
