--- a/index.html
+++ b/index.html
@@ -101,6 +101,17 @@ Many of the tools have a "Open In" button, this allows a log that has been opene
 
   <tr>
     <td>
+      <a href="./DFULoader" style="margin: 20px; display: inline-block;"><img src="images/DFULoader_Icon.png" style="width:200px"></a>
+    </td>
+    <td style="text-align:left; vertical-align:top; max-width:960px;">
+      <h2>DFU Loader</h2>
+      The DFU loader allows you to load an ArduPilot bootloader via
+      DFU on USB
+    </td>
+  </tr>
+  
+  <tr>
+    <td>
       <a href="./Dev" style="margin: 20px; display: inline-block;"><img src="images/under-construction-sign-icon.png" style="width:200px"></a>
     </td>
     <td style="text-align:left; vertical-align:top; max-width:960px;">
