--- a/Chat/index.html
+++ b/Chat/index.html
@@ -92,7 +92,7 @@
                     </span> -->
         </div>
 
-        <div id="chatBox" class="flex-1 overflow-y-auto space-y-3 mb-4 flex flex-col">
+        <div id="chatBox" class="flex-1 overflow-y-auto space-y-3 mb-4 flex flex-col max-h-[73vh]">
           <div class="chat-message-bot">
             <p class="text-sm">Welcome! I'm your ArduPilot AI assistant. You can control the drone using
               natural language commands like:</p>
@@ -632,10 +632,10 @@
 
     // global variable to store wakeup messages
     let wakeup_schedule = [];
-    // window.onload = function () {
-    // initialize the check wakeup:
-    // check_wakeup_timers();
-    // };
+    window.onload = function () {
+      // initialize the check wakeup:
+      check_wakeup_timers();
+    };
 
     // add text to chat box
     function add_text_to_chat(text, role = "assistant") {
@@ -692,6 +692,12 @@
     async function send_to_assistant(message) {
       // check connection
       if (!(await check_connection())) {
+        return;
+      }
+
+      // sanity check message
+      if (!message || message.trim() === "") {
+        add_text_to_debug("send_to_assistant: message is empty");
         return;
       }
 
@@ -828,11 +834,11 @@
         case "get_parameter":
           // Get a vehicle parameter's value.  The full list of available parameters and their values is available using the get_all_parameters function
           // fallthrough
+          add_text_to_debug("get_parameter args: " + JSON.stringify(args));
           return get_parameter(args);
         case "get_wakeup_timers":
           // Retrieves a list of all active wakeup timers. You can optionally provide a message parameter to filter timers by their associated messages. When specifying the message parameter, you can use regular expressions (regex) to match patterns within the timer messages. This is useful when you want to find timers with specific keywords or patterns in their messages. For example, to retrieve all timers containing the word 'hello', you can use the regex '.*hello.*', where the dot-star (.*) pattern matches any character sequence.
           // fallthrough
-          add_text_to_debug("get_wakeup_timers: name: " + name);
           add_text_to_debug("get_wakeup_timers: args: " + JSON.stringify(args));
           const wakeup_response = get_wakeup_timers(args);
           return wakeup_response;
@@ -846,6 +852,7 @@
           return send_mavlink_set_position_target_global_int(args);
         case "get_vehicle_state":
           // Get the vehicle state including armed status and (flight) mode
+          add_text_to_debug("get_vehicle_state args: " + JSON.stringify(args));
           return get_vehicle_state();
         case "get_location_plus_offset":
           // Calculate the latitude and longitude given an existing latitude and longitude and distances (in meters) North and East
@@ -873,8 +880,6 @@
         case "delete_wakeup_timers":
           // Delete all active wakeup timers. You can optionally provide a message parameter to filter which timers will be deleted based on their message. When specifying the message parameter, you can use regular expressions (regex) to match patterns within the timer messages. This is useful when you want to delete timers with specific keywords or patterns in their message. For example, to delete all timers containing the word 'hello', you can use the regex '.*hello.*', where the dot-star (.*) pattern matches any character sequence.
           // fallthrough
-          add_text_to_debug("delete_wakeup_timers: name: " + name);
-          add_text_to_debug("delete_wakeup_timers: args: " + JSON.stringify(args));
           return delete_wakeup_timers(args);
         case "set_parameter":
         // Set a vehicle parameter's value.  The full list of parameters is available using the get_all_parameters function
@@ -885,31 +890,19 @@
           return "Unknown function: " + name;
         case "get_current_datetime":
           // Get the current date and time, e.g. 'Saturday, June 24, 2023 6:14:14 PM
+          add_text_to_debug("get_current_datetime called");
           return getFormattedDate();
         case "get_mode_mapping":
           // Get a list of mode names to mode numbers available for this vehicle.  If the name or number parameter is provided only that mode's name and number will be returned.  If neither name nor number is provided the full list of available modes will be returned
           // fallthrough
-          return {
-            "STABILIZE": 0,
-            "ACRO": 1,
-            "ALT_HOLD": 2,
-            "AUTO": 3,
-            "GUIDED": 4,
-            "LOITER": 5,
-            "RTL": 6,
-            "CIRCLE": 7,
-            "LAND": 9,
-            "DRIFT": 11,
-            "POSHOLD": 16
-          };
-
+          const mode_mapping = get_mode_mapping(args);
+          add_text_to_debug("get_mode_mapping response: " + JSON.stringify(mode_mapping));
+          return mode_mapping;
         case "get_all_parameters":
         // Get all available parameter names and values
         // fallthrough
         case "set_wakeup_timer":
           // Set a timer to wake you up in a specified number of seconds in the future.  This allows taking actions in the future.  The wakeup message will appear with the user role but will look something like WAKEUP:<message>.  Multiple wakeup messages are supported
-
-          add_text_to_debug("set_wakeup_timer function: " + name);
           return set_wakeup_timer(args);
         case "get_available_mavlink_messages":
           return get_available_mavlink_messages();
@@ -964,6 +957,170 @@
       // if we got this far  we don't know the vehicle type
       add_text_to_debug("get_vehicle_type: no match for type:" + heartbeat_msg.type);
       return "unknown";
+    }
+
+    // return a mapping of mode names to numbers for the current vehicle type
+    function get_mode_mapping(args) {
+      if (typeof args === "string") {
+        try {
+          args = JSON.parse(args);
+        } catch (e) {
+          add_text_to_debug("get_mode_mapping: ERROR parsing args string");
+          args = {};
+        }
+      }
+
+      args = args || {};
+
+      // get name and/or number arguments
+      let mode_name = args.name ?? null;
+      if (mode_name != null) {
+        mode_name = mode_name.toUpperCase();
+      }
+
+      let mode_number = args.number ?? null;
+      if (mode_number != null) {
+        mode_number = parseInt(mode_number, 10);
+      }
+
+      // prepare list of modes
+      let mode_list = [];
+      let mode_mapping = {};
+
+      const vehicle_type = get_vehicle_type();
+      switch (vehicle_type) {
+        case "Heli":
+        case "Blimp":
+        case "Copter":
+          mode_mapping = {
+            "STABILIZE": mavlink20.COPTER_MODE_STABILIZE,
+            "ACRO": mavlink20.COPTER_MODE_ACRO,
+            "ALT_HOLD": mavlink20.COPTER_MODE_ALT_HOLD,
+            "AUTO": mavlink20.COPTER_MODE_AUTO,
+            "GUIDED": mavlink20.COPTER_MODE_GUIDED,
+            "LOITER": mavlink20.COPTER_MODE_LOITER,
+            "RTL": mavlink20.COPTER_MODE_RTL,
+            "CIRCLE": mavlink20.COPTER_MODE_CIRCLE,
+            "LAND": mavlink20.COPTER_MODE_LAND,
+            "DRIFT": mavlink20.COPTER_MODE_DRIFT,
+            "SPORT": mavlink20.COPTER_MODE_SPORT,
+            "FLIP": mavlink20.COPTER_MODE_FLIP,
+            "AUTOTUNE": mavlink20.COPTER_MODE_AUTOTUNE,
+            "POSHOLD": mavlink20.COPTER_MODE_POSHOLD,
+            "BRAKE": mavlink20.COPTER_MODE_BRAKE,
+            "THROW": mavlink20.COPTER_MODE_THROW,
+            "AVOID_ADSB": mavlink20.COPTER_MODE_AVOID_ADSB,
+            "GUIDED_NOGPS": mavlink20.COPTER_MODE_GUIDED_NOGPS,
+            "SMART_RTL": mavlink20.COPTER_MODE_SMART_RTL,
+            "FLOWHOLD": mavlink20.COPTER_MODE_FLOWHOLD,
+            "FOLLOW": mavlink20.COPTER_MODE_FOLLOW,
+            "ZIGZAG": mavlink20.COPTER_MODE_ZIGZAG,
+            "SYSTEMID": mavlink20.COPTER_MODE_SYSTEMID,
+            "AUTOROTATE": mavlink20.COPTER_MODE_AUTOROTATE,
+            "AUTO_RTL": mavlink20.COPTER_MODE_AUTO_RTL
+          };
+          break;
+        case "Plane":
+          mode_mapping = {
+            "MANUAL": mavlink20.PLANE_MODE_MANUAL,
+            "CIRCLE": mavlink20.PLANE_MODE_CIRCLE,
+            "STABILIZE": mavlink20.PLANE_MODE_STABILIZE,
+            "TRAINING": mavlink20.PLANE_MODE_TRAINING,
+            "ACRO": mavlink20.PLANE_MODE_ACRO,
+            "FLY_BY_WIRE_A": mavlink20.PLANE_MODE_FLY_BY_WIRE_A,
+            "FLY_BY_WIRE_B": mavlink20.PLANE_MODE_FLY_BY_WIRE_B,
+            "CRUISE": mavlink20.PLANE_MODE_CRUISE,
+            "AUTOTUNE": mavlink20.PLANE_MODE_AUTOTUNE,
+            "AUTO": mavlink20.PLANE_MODE_AUTO,
+            "RTL": mavlink20.PLANE_MODE_RTL,
+            "LOITER": mavlink20.PLANE_MODE_LOITER,
+            "TAKEOFF": mavlink20.PLANE_MODE_TAKEOFF,
+            "AVOID_ADSB": mavlink20.PLANE_MODE_AVOID_ADSB,
+            "GUIDED": mavlink20.PLANE_MODE_GUIDED,
+            "INITIALIZING": mavlink20.PLANE_MODE_INITIALIZING,
+            "QSTABILIZE": mavlink20.PLANE_MODE_QSTABILIZE,
+            "QHOVER": mavlink20.PLANE_MODE_QHOVER,
+            "QLOITER": mavlink20.PLANE_MODE_QLOITER,
+            "QLAND": mavlink20.PLANE_MODE_QLAND,
+            "QRTL": mavlink20.PLANE_MODE_QRTL,
+            "QAUTOTUNE": mavlink20.PLANE_MODE_QAUTOTUNE,
+            "QACRO": mavlink20.PLANE_MODE_QACRO,
+            "THERMAL": mavlink20.PLANE_MODE_THERMAL
+          };
+          break;
+        case "Boat":
+        case "Rover":
+          mode_mapping = {
+            "MANUAL": mavlink20.ROVER_MODE_MANUAL,
+            "ACRO": mavlink20.ROVER_MODE_ACRO,
+            "STEERING": mavlink20.ROVER_MODE_STEERING,
+            "HOLD": mavlink20.ROVER_MODE_HOLD,
+            "LOITER": mavlink20.ROVER_MODE_LOITER,
+            "FOLLOW": mavlink20.ROVER_MODE_FOLLOW,
+            "SIMPLE": mavlink20.ROVER_MODE_SIMPLE,
+            "AUTO": mavlink20.ROVER_MODE_AUTO,
+            "RTL": mavlink20.ROVER_MODE_RTL,
+            "SMART_RTL": mavlink20.ROVER_MODE_SMART_RTL,
+            "GUIDED": mavlink20.ROVER_MODE_GUIDED,
+            "INITIALIZING": mavlink20.ROVER_MODE_INITIALIZING
+          };
+          break;
+        case "Sub":
+          mode_mapping = {
+            "STABILIZE": mavlink20.SUB_MODE_STABILIZE,
+            "ACRO": mavlink20.SUB_MODE_ACRO,
+            "ALT_HOLD": mavlink20.SUB_MODE_ALT_HOLD,
+            "AUTO": mavlink20.SUB_MODE_AUTO,
+            "GUIDED": mavlink20.SUB_MODE_GUIDED,
+            "CIRCLE": mavlink20.SUB_MODE_CIRCLE,
+            "SURFACE": mavlink20.SUB_MODE_SURFACE,
+            "POSHOLD": mavlink20.SUB_MODE_POSHOLD,
+            "MANUAL": mavlink20.SUB_MODE_MANUAL
+          };
+          break;
+        case "Tracker":
+          mode_mapping = {
+            "MANUAL": mavlink20.TRACKER_MODE_MANUAL,
+            "STOP": mavlink20.TRACKER_MODE_STOP,
+            "SCAN": mavlink20.TRACKER_MODE_SCAN,
+            "SERVO_TEST": mavlink20.TRACKER_MODE_SERVO_TEST,
+            "AUTO": mavlink20.TRACKER_MODE_AUTO,
+            "INITIALIZING": mavlink20.TRACKER_MODE_INITIALIZING
+          };
+          break;
+        default:
+          // maybe we don't know the vehicle type
+          add_text_to_debug("get_mode_mapping: unknown vehicle type: " + vehicle_type);
+          return `get_mode_mapping: failed to retrieve mode mapping: unknown vehicle type: ${vehicle_type}`;
+      }
+
+      // handle request for all modes
+      if (mode_name === null && mode_number === null) {
+        for (let mname in mode_mapping) {
+          let mnumber = mode_mapping[mname];
+          mode_list.push({ "name": mname.toUpperCase(), "number": mnumber });
+        }
+      }
+      // handle request using mode name
+      else if (mode_name !== null) {
+        for (let mname in mode_mapping) {
+          if (mname.toUpperCase() === mode_name) {
+            mode_list.push({ "name": mname.toUpperCase(), "number": mode_mapping[mname] });
+          }
+        }
+      }
+      // handle request using mode number
+      else if (mode_number !== null) {
+        for (let mname in mode_mapping) {
+          let mnumber = mode_mapping[mname];
+          if (mnumber === mode_number) {
+            mode_list.push({ "name": mname.toUpperCase(), "number": mnumber });
+          }
+        }
+      }
+
+      // return list of modes
+      return mode_list;
     }
 
     // get a vehicle parameter's value
@@ -1170,6 +1327,7 @@
 
     // get the current time and date as a string. E.g. 'Saturday, June 24, 2023 6:14:14 PM'
     function getFormattedDate() {
+      add_text_to_debug("getFormattedDate called");
       const options = {
         weekday: 'long',
         year: 'numeric',
@@ -1185,7 +1343,6 @@
 
     // set a wakeup timer
     function set_wakeup_timer(args) {
-      // check required arguments are specified
       if (typeof args === "string") {
         try {
           args = JSON.parse(args);
@@ -1195,69 +1352,102 @@
         }
       }
 
-      const seconds = args.seconds !== undefined ? args.seconds : -1;
+      // check required arguments are specified
+      const seconds = args.seconds ?? -1;
       if (seconds < 0) {
         return "set_wakeup_timer: seconds not specified";
       }
-      const message = args.message !== undefined ? args.message : null;
+      const message = args.message ?? null;
       if (message === null) {
         return "set_wakeup_timer: message not specified";
       }
 
       // add timer to wakeup schedule
       const triggerTime = Date.now() + seconds * 1000; // seconds → milliseconds → match Date.now()
+      add_text_to_debug("set_wakeup_timer: triggerTime: " + new Date(triggerTime).toLocaleString());
+      add_text_to_debug("current time: " + new Date(Date.now()).toLocaleString());
       wakeup_schedule.push({ time: triggerTime, message: message });
-
+      add_text_to_debug("wakeup_schedule: " + JSON.stringify(wakeup_schedule));
       return "set_wakeup_timer: wakeup timer set";
     }
 
     // get wake timers
     function get_wakeup_timers(args) {
-      // check message argument, default to null meaning all
-      const message = args.message ?? null;
-      // prepare list of matching timers
-      const matching_timers = [];
-
-      // handle simple case of all timers
-      if (message === null) {
-        matching_timers = wakeup_schedule;
-      }
-
-      // handle regex in message
-      else if (contains_regex(message)) {
-        const pattern = new RegExp(message, "i"); // ignore case
-        for (const wakeup_timer of wakeup_schedule) {
-          if (pattern.test(wakeup_timer.message)) {
-            matching_timers.push(wakeup_timer);
-          }
+      if (typeof args === "string") {
+        try {
+          args = JSON.parse(args);
+        } catch (e) {
+          add_text_to_debug("ERROR set_wakeup_timer: Could not parse args JSON");
+          return "Invalid arguments: JSON parse error";
         }
       }
 
-      // handle case of a specific message
-      else {
-        for (const wakeup_timer of wakeup_schedule) {
-          if (wakeup_timer.message === message) {
-            matching_timers.push(wakeup_timer);
-          }
-        }
-      }
+      try {
 
-      // return matching timers
-      return matching_timers;
+        // check message argument, default to null meaning all
+        const message = args.message ?? null;
+        // prepare list of matching timers
+        let matching_timers = [];
+
+        // handle simple case of all timers
+        if (message === null) {
+          matching_timers = wakeup_schedule;
+          add_text_to_debug("get_wakeup_timers: returning all timers");
+        }
+
+        // handle regex in message
+        else if (contains_regex(message)) {
+          const pattern = new RegExp(message, "i"); // ignore case
+          for (const wakeup_timer of wakeup_schedule) {
+            if (pattern.test(wakeup_timer.message)) {
+              matching_timers.push(wakeup_timer);
+            }
+          }
+          add_text_to_debug("get_wakeup_timers: returning timers matching regex: " + message);
+        }
+
+        // handle case of a specific message
+        else {
+          for (const wakeup_timer of wakeup_schedule) {
+            if (wakeup_timer.message === message) {
+              matching_timers.push(wakeup_timer);
+            }
+          }
+          add_text_to_debug("get_wakeup_timers: returning timers matching message: " + message);
+        }
+
+        // return matching timers
+        return matching_timers;
+
+      } catch (e) {
+        add_text_to_debug("ERROR get_wakeup_timers: " + e);
+        return "Invalid arguments: JSON parse error";
+      }
     }
 
     // delete wake timers
     function delete_wakeup_timers(args) {
+      if (typeof args === "string") {
+        try {
+          args = JSON.parse(args);
+        } catch (e) {
+          add_text_to_debug("ERROR set_wakeup_timer: Could not parse args JSON");
+          return "Invalid arguments: JSON parse error";
+        }
+      }
+
       // check message argument, default to all
       const message = args.message ?? null;
 
       // find matching timers
       let numDeleted = 0;
 
+      add_text_to_debug("delete_wakeup_timers: message: " + message);
       // handle simple case of deleting all timers
       if (message === null) {
         numDeleted = wakeup_schedule.length;
         wakeup_schedule.length = 0;
+        add_text_to_debug("delete_wakeup_timers: deleted all timers");
       }
       // handle regex in message
       else if (contains_regex(message)) {
@@ -1268,6 +1458,7 @@
             numDeleted++;
           }
         }
+        add_text_to_debug("delete_wakeup_timers: deleted timers matching regex: " + message);
       }
       // handle simple case of a single message
       else {
@@ -1277,6 +1468,7 @@
             numDeleted++;
           }
         }
+        add_text_to_debug("delete_wakeup_timers: deleted timers matching message: " + message);
       }
 
       // return number deleted and remaining
@@ -1566,8 +1758,6 @@
     // Access the global OpenAI instance safely
     const openai = window.openai;
 
-    add_text_to_chat("OpenAI key: " + openai.apiKey, "assistant");
-
     // add text to chat box
     function add_text_to_chat(text, role = "assistant") {
       let div_class = role === "assistant" ? "assistant-text" : "user-text";
@@ -1734,6 +1924,8 @@
         const formData = new FormData();
         formData.append("file", blob, "recording.webm");
         formData.append("model", "whisper-1");
+        // update this static language option with dynamic in future , let user choose language
+        formData.append("language", "en");
 
         const resp = await fetch("https://api.openai.com/v1/audio/transcriptions", {
           method: "POST",
